fix: leaderboards button invisible in map selector
Forget to remove this wrapper when pulling my gallery mode changes out
from the rest of the last PR. Visibility CSS change probs not necessary
but keeping it for my sanity

--- a/styles/pages/map-selector/map-selector.scss
+++ b/styles/pages/map-selector/map-selector.scss
@@ -305,6 +305,7 @@ $notch-width: 10px;
 	&__open-button {
 		horizontal-align: right;
 		height: 36px;
+		visibility: visible;
 
 		#{$root}--open & {
 			visibility: collapse;
